// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcTableFooter should render an empty row if no props are supplied 1`] = `
<tfoot
  class="ec-table-footer"
>
  <tr
    class="ec-table-footer__row"
  >
    <td
      class="ec-table-footer__cell"
    >
      <div
        class="ec-table-footer__contents"
      >
        <div
          class="ec-table-footer__details"
        >
          
        </div>
         
        <!---->
      </div>
    </td>
  </tr>
</tfoot>
`;

exports[`EcTableFooter should render with \`total items\` text if there are more total items supplied than items in view 1`] = `
<tfoot
  class="ec-table-footer"
>
  <tr
    class="ec-table-footer__row"
  >
    <td
      class="ec-table-footer__cell"
    >
      <div
        class="ec-table-footer__contents"
      >
        <div
          class="ec-table-footer__details"
        >
          Viewing 17 of 21 items.
        </div>
         
        <!---->
      </div>
    </td>
  </tr>
</tfoot>
`;

exports[`EcTableFooter should render with singular text if supplied with 1 item and no total items 1`] = `
<tfoot
  class="ec-table-footer"
>
  <tr
    class="ec-table-footer__row"
  >
    <td
      class="ec-table-footer__cell"
    >
      <div
        class="ec-table-footer__contents"
      >
        <div
          class="ec-table-footer__details"
        >
          1 item.
        </div>
         
        <!---->
      </div>
    </td>
  </tr>
</tfoot>
`;

exports[`EcTableFooter should render with singular text if there is only 1 for total items 1`] = `
<tfoot
  class="ec-table-footer"
>
  <tr
    class="ec-table-footer__row"
  >
    <td
      class="ec-table-footer__cell"
    >
      <div
        class="ec-table-footer__contents"
      >
        <div
          class="ec-table-footer__details"
        >
          1 item.
        </div>
         
        <!---->
      </div>
    </td>
  </tr>
</tfoot>
`;

exports[`EcTableFooter should render with the plural text when supplied with more than 1 item and no total items 1`] = `
<tfoot
  class="ec-table-footer"
>
  <tr
    class="ec-table-footer__row"
  >
    <td
      class="ec-table-footer__cell"
    >
      <div
        class="ec-table-footer__contents"
      >
        <div
          class="ec-table-footer__details"
        >
          2 items.
        </div>
         
        <!---->
      </div>
    </td>
  </tr>
</tfoot>
`;

exports[`EcTableFooter should render without \`total items\` text if there are more items supplied than total items 1`] = `
<tfoot
  class="ec-table-footer"
>
  <tr
    class="ec-table-footer__row"
  >
    <td
      class="ec-table-footer__cell"
    >
      <div
        class="ec-table-footer__contents"
      >
        <div
          class="ec-table-footer__details"
        >
          13 items.
        </div>
         
        <!---->
      </div>
    </td>
  </tr>
</tfoot>
`;
